# Asistente-de-Ventas-y-Atenci-n-al-Cliente

./: .gitignore  API_GUIA_FRONTEND.md  GUION_TEXTO_AGENTE2.md  PRUEBAS_FRONTEND.md  PRUEBAS_GRAPHQL.md  README.md  Rubrica_propuesta.md  VERIFICAR_COMPRA.md  init.db.py  init_db_2.py  migrate_db_add_chat_history.py  pyproject.toml  pytest.ini  reset_database.sh
backend/: README.md  container.py  main.py
backend/agents/: __init__.py  checkout_agent.py  orchestrator.py  retriever_agent.py  sales_agent.py
backend/api/endPoints/: router.py
backend/api/graphql/: mutations.py  queries.py  types.py
backend/config/: logging_config.py  settings.py
backend/database/: connection.py
backend/domain/: __init__.py  agent_schemas.py  product_schemas.py
backend/llm/: provider.py
backend/services/: __init__.py  order_service.py  product_comparison_service.py  product_service.py  search_service.py  session_service.py  tenant_data_service.py
backend/tests/: conftest.py
documents/: API_ENDPOINTS_FRONTEND.md  API_GUIA_FRONTEND.md  CORRECCIONES_IMPLEMENTADAS.md  ESTADO_ACTUAL_PROYECTO.md  GUIA_TESTING_COMPLETO_API.md  GUIONES_NATURALES.md  GUION_AGENTE3_PRUEBAS.txt  PROJECT-1.md  PROJECT-2.md  REINICIAR_BASE_DATOS.md  SISTEMA_LOGS_COMPLETO.md  TEST_ENDPOINTS.md  TEST_QUERIES.md  flujo_end_to_end.md  indicaciones.md  pruebas-test.txt  pruebas.md  resultados.md  test_guion_refactor.md
documents/faqs_rag/: PRUEBAS_MANUALES.md
frontend/asistentebot/: package-lock.json  package.json
notebooks/: 01_Sales_Agent_Brain.ipynb  03_Integrated_Sales_Agent_LangGraph.ipynb
(+38 files in other folders)
