[project]
name = "practica-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioinject>=1.10.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "langchain-core>=1.2.7",
    "langchain-openai>=1.1.7",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.46",
    "strawberry-graphql>=0.289.3",
    "uvicorn[standard]>=0.40.0",
]
